# NukePluginTemplate

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.devcontainer/linux/: Dockerfile  devcontainer.json
.devcontainer/macos-arm/: Dockerfile  devcontainer.json
.devcontainer/macos-x86/: Dockerfile  devcontainer.json
.github/workflows/: build.yaml
src/: Multiply.cpp
